ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ...
    ...
  labels:
    name: verdaccio-app
  name: verdaccio-app
spec:
  rules:
    ...
  tls:
    ...
